# roll-OHLC

./: Cargo.toml  README.md
28072023-Shane-Gomes-solution/ohlc_lib/: Cargo.toml
28072023-Shane-Gomes-solution/ohlc_lib/src/output/: ohlc-5m-b_shane.txt
28072023-Shane-Gomes-solution/rolling_ohlc/: Cargo.toml
28072023-Shane-Gomes-solution/rolling_ohlc/src/data/: modified-dataset-a.txt
ohlc_lib/src/: lib.rs
ohlc_lib/src/output/: mod-ohlc-5m-a.txt  mod-ohlc-5m-a_shane.txt  ohlc-5m-a.txt  ohlc-5m-b.txt
rolling_ohlc/src/: main.rs
