[package]
name = "ohlc_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.177", features = ["derive"] }
rust_decimal = { version = "1.31", features = ["serde-with-float", "serde-with-str"]}
serde_json = "1.0.104"
statistical = "1.0.0"
