[package]
name = "rolling_ohlc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ohlc_lib = { path = "../ohlc_lib" }
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
statistical = "1.0.0"
rust_decimal = "1.31"
rust_decimal_macros = "1.31"
thiserror = "1.0.47"